@@ -85,6 +85,7 @@ pygame.color.Color(colorname) -> RGBA
        With the hex color formatting you may optionally include an
        alpha value, the formatting is 0xRRGGBBAA. You may also specify
        a hex formatted color by starting the string with a '#'.
+       The color name used is case insensitive and whitespace is ignored.
     
 </ul><br>&nbsp;<br>
 
